--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 			<span class="comments">// Comparing me to Padme and asking to be my Luke? </span><br />
 			That was the only pickup line i've ever gotten;<br />
 			<span class="comments">// It also happens to be the only one i'd ever need.</span><br />
-			Your everything got imprinted in my heart;<br />
-			As the time went on;<br />
-			The Bond grew stronger and stronger;<br />
-			Journey from Infatuation to Love;<br />
+			Ever since you've become imprinted on me;<br />
+			And as time has gone on;<br />
+			We've only became closer and closer;<br />
+			Me and you are intertwined;<br />
 			We have traveled a long way together;<br />
-			There have been fights ;<br />
-			<span class="comments">// And I'm sure there will be more.</span><br />
-			But our Bond will always grow back Stronger;<br />
+			We have coined the phrase "Equal Obsession" ;<br />
+			<span class="comments">// And it is well deserved.</span><br />
+			I feel the exact same I did in the start and that's scarce;<br />
 			<br>
 			<br>
-			All I have left to say is:<br />
+			The last thing I have to say is that:<br />
 			You are the thought that never collects dust;<br />
 			<br>
 			<br>
-			click the heart NOW<br />
+			Now click the heart (:<<br />
 			<br>
 			<span id="heartspan">
 			<a href="image.jpg"><i class="fas fa-heart" id="icon"></i></a>
